# devops-adventure-dirtychewbacca

./: .env  .env_old  .gitignore  Makefile  README.md  docker-compose-dockerhub.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: pipeline.yml
app/: .env_  Dockerfile  pyproject.toml
app/src/: app.py  config.py  db.py  demo.py
fastapi_postgres_app/: .env  Dockerfile  pyproject.toml
fastapi_postgres_app/app/: crud.py  database.py  main.py  models.py  schemas.py
fastapi_postgres_app/app/routers/: orders.py  products.py  users.py
fastapi_postgres_app/tests/: test_users.py
migrations/: V20241025.1300__Create_TB_Users.sql  V20241025.1500__Create_TB_Orders.sql  V20241025.1500__Create_TB_Users.sql  V20241025.1700__Create_TB_Products.sql
postgres/: Dockerfile
